Archive2/a6/3709af62172c2f/output
main.cpp:9:16: error: calling a private constructor of class 'A'
    A* a = new A();
               ^
main.cpp:4:5: note: declared private here
    A() {}
    ^
1 error generated.
